fix: :bug: fix airdrop row rendering on safari

--- a/src/css/components/table.scss
+++ b/src/css/components/table.scss
@@ -173,27 +173,31 @@ $row-padding-x: 30px;
                     border: none;
     
                     &::after {
-                        content: '';
-                        position: absolute;
-                        z-index: 0;
-                        pointer-events: none;
-                        left: 0;
-                        top: 0;
-                        width: 100%;
-                        height: 100%;
-                        background-color: transparentize($color: $white, $amount: 0.95);
-                        backdrop-filter: unset;
-                        border-radius: 20px;
+                        display: none;
                     }
     
-                    &:hover::after {
-                        background-color: transparentize($color: $white, $amount: 0.9);
-                        backdrop-filter: unset;
+                    &:hover {
+                        td {
+                            background-color: transparentize($color: $white, $amount: 0.9);
+                        }
                     }
 
                     td {
                         padding-top: $alternative-row-padding-y;
                         padding-bottom: $alternative-row-padding-y;
+                        background-color: transparentize($color: $white, $amount: 0.95);
+                        backdrop-filter: unset;
+                        
+
+                        &:first-child {
+                            border-top-left-radius: 20px;
+                            border-bottom-left-radius: 20px;
+                        }
+
+                        &:last-child {
+                            border-top-right-radius: 20px;
+                            border-bottom-right-radius: 20px;
+                        }
                     }
                 }
             }
